<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".analyzer">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textB"/>
            <EditText
                android:id="@+id/textB"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textC"/>
            <EditText
                android:id="@+id/textC"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textD"/>
            <EditText
                android:id="@+id/textD"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textE"/>
            <EditText
                android:id="@+id/textE"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textF"/>
            <EditText
                android:id="@+id/textF"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textG"/>
            <EditText
                android:id="@+id/textG"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textH"/>
            <EditText
                android:id="@+id/textH"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textI"/>
            <EditText
                android:id="@+id/textI"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textJ"/>
            <EditText
                android:id="@+id/textJ"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textK"/>
            <EditText
                android:id="@+id/textK"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textL"/>
            <EditText
                android:id="@+id/textL"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textM"/>
            <EditText
                android:id="@+id/textM"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textN"/>
            <EditText
                android:id="@+id/textN"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textO"/>
            <EditText
                android:id="@+id/textO"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textP"/>
            <EditText
                android:id="@+id/textP"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textQ"/>
            <EditText
                android:id="@+id/textQ"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textS"/>
            <EditText
                android:id="@+id/textS"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textT"/>
            <EditText
                android:id="@+id/textT"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textU"/>
            <EditText
                android:id="@+id/textU"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textV"/>
            <EditText
                android:id="@+id/textV"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textW"/>
            <EditText
                android:id="@+id/textW"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textX"/>
            <TextView
                android:id="@+id/textX"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textY"/>
            <TextView
                android:id="@+id/textY"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textZ"/>
            <TextView
                android:id="@+id/textZ"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAA"/>
            <TextView
                android:id="@+id/textAA"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAB"/>
            <TextView
                android:id="@+id/textAB"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAC"/>
            <TextView
                android:id="@+id/textAC"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAD"/>
            <TextView
                android:id="@+id/textAD"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAE"/>
            <TextView
                android:id="@+id/textAE"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAF"/>
            <TextView
                android:id="@+id/textAF"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAG"/>
            <TextView
                android:id="@+id/textAG"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAH"/>
            <TextView
                android:id="@+id/textAH"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAI"/>
            <TextView
                android:id="@+id/textAI"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textAJ"/>
            <TextView
                android:id="@+id/textAJ"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>